--- a/apps/backend/Cargo.toml
+++ b/apps/backend/Cargo.toml
@@ -15,6 +15,7 @@ async-graphql-axum = { workspace = true }
 axum = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 background-models = { path = "../../crates/models/background" }
+bon = { workspace = true }
 cache-service = { path = "../../crates/services/cache" }
 chrono-tz = { workspace = true }
 collection-resolver = { path = "../../crates/resolvers/collection" }
