--- a/libs/transactional/moon.yml
+++ b/libs/transactional/moon.yml
@@ -1,31 +1,16 @@
-type: 'library'
+type: "library"
 
 dependsOn:
-  - 'assets'
+  - "assets"
 
 fileGroups:
   email:
-    - 'emails/**/*'
+    - "emails/**/*"
 
 tasks:
   dev:
-    command: 'email dev --port 6200'
+    command: "email dev --port 6200"
     local: true
 
-  build-html:
-    command: 'email export'
-    inputs: ['@group(email)']
-    outputs: ['out']
-
-  copy-files:
-    command: 'cp -r out/. ../../crates/services/notification/templates'
-    deps: ['~:build-html']
-    platform: 'system'
-
-  build:
-    deps: ['~:copy-files']
-    options:
-      runDepsInParallel: false
-
   typecheck:
-    inputs: ['@group(email)']
+    inputs: ["@group(email)"]
