--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,6 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-askama = "=0.12.1"
 anyhow = "=1.0.95"
 apalis = { version = "=0.6.4", features = ["catch-panic", "limit", "retry"] }
 apalis-cron = "=0.6.4"
@@ -64,6 +63,7 @@ async-trait = "=0.1.86"
 aws-sdk-s3 = { version = "=1.72.0", features = ["behavior-version-latest"] }
 axum = { version = "=0.8.1", features = ["macros", "multipart"] }
 boilermates = "=0.3.0"
+bon = "=3.3.2"
 chrono = "=0.4.39"
 chrono-tz = "=0.10.1"
 compile-time = "=0.2.0"
@@ -96,7 +96,6 @@ indoc = "=2.0.5"
 isolang = { version = "=2.4.0", features = ["list_languages"] }
 itertools = "=0.14.0"
 jsonwebtoken = { version = "=9.3.0", default-features = false }
-lettre = "=0.11.11"
 logs-wheel = "=0.3.1"
 markdown = "=1.0.0-alpha.21"
 mime_guess = "=2.0.5"
@@ -110,8 +109,7 @@ regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
 rust_iso3166 = "=0.1.14"
-# TODO: Update when https://codeberg.org/ThetaDev/rustypipe/issues/25 is merged
-rustypipe = { git = "https://codeberg.org/ThetaDev/rustypipe.git", rev = "19e1428679" }
+rustypipe = { version = "0.10.0", features = ["userdata"] }
 schematic = { version = "=0.17.11", features = [
     "config",
     "env",
