--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,27 +51,27 @@ anyhow = "=1.0.95"
 apalis = { version = "=0.6.4", features = ["catch-panic", "limit", "retry"] }
 apalis-cron = "=0.6.4"
 argon2 = "=0.6.0-pre.1"
-async-graphql = { version = "=7.0.14", features = [
+async-graphql = { version = "=7.0.15", features = [
     "chrono",
     "decimal",
     "log",
     "tracing",
     "uuid",
 ] }
-async-graphql-axum = "=7.0.14"
+async-graphql-axum = "=7.0.15"
 async-trait = "=0.1.86"
-aws-sdk-s3 = { version = "=1.72.0", features = ["behavior-version-latest"] }
+aws-sdk-s3 = { version = "=1.76.0", features = ["behavior-version-latest"] }
 axum = { version = "=0.8.1", features = ["macros", "multipart"] }
 boilermates = "=0.3.0"
 bon = "=3.3.2"
 chrono = "=0.4.39"
 chrono-tz = "=0.10.1"
 compile-time = "=0.2.0"
-const-str = "=0.6.1"
+const-str = "=0.6.2"
 convert_case = "=0.7.1"
 csv = "=1.3.1"
-data-encoding = "=2.7.0"
-derive_more = { version = "=1.0.0", features = [
+data-encoding = "=2.8.0"
+derive_more = { version = "=2.0.1", features = [
     "add",
     "add_assign",
     "sum",
@@ -95,16 +95,16 @@ indexmap = "=2.7.1"
 indoc = "=2.0.5"
 isolang = { version = "=2.4.0", features = ["list_languages"] }
 itertools = "=0.14.0"
-jsonwebtoken = { version = "=9.3.0", default-features = false }
+jsonwebtoken = { version = "=9.3.1", default-features = false }
 logs-wheel = "=0.3.1"
-markdown = "=1.0.0-alpha.21"
+markdown = "=1.0.0-alpha.22"
 mime_guess = "=2.0.5"
 nanoid = "=0.4.0"
-nest_struct = "=0.5.2"
+nest_struct = "=0.5.3"
 openidconnect = "=3.5.0"
 paginate = "=1.1.11"
 radarr-api-rs = "=3.0.1"
-rand = "=0.9.0-beta.0"
+rand = "=0.9.0"
 regex = "=1.11.1"
 rust_decimal = "=1.36.0"
 rust_decimal_macros = "=1.36.0"
@@ -125,7 +125,7 @@ schematic = { version = "=0.17.11", features = [
     "yaml",
 ], default-features = false }
 scraper = "=0.22.0"
-sea-orm = { version = "=1.1.4", features = [
+sea-orm = { version = "=1.1.5", features = [
     "debug-print",
     "postgres-array",
     "macros",
@@ -136,15 +136,15 @@ sea-orm = { version = "=1.1.4", features = [
     "with-rust_decimal",
     "with-uuid",
 ], default-features = false }
-sea-orm-migration = "=1.1.4"
-sea-query = "=0.32.1"
+sea-orm-migration = "=1.1.5"
+sea-query = "=0.32.2"
 serde = { version = "=1.0.217", features = ["derive"] }
 serde_json = "=1.0.138"
 serde_with = { version = "=3.12.0", features = ["chrono_0_4"] }
 serde-xml-rs = "=0.6.0"
 slug = "=0.1.6"
 sonarr-api-rs = "=3.0.0"
-sqlx = { version = "=0.8.2", default-features = false, features = ["postgres"] }
+sqlx = { version = "=0.8.3", default-features = false, features = ["postgres"] }
 strum = { version = "=0.26.3", features = ["derive"] }
 struson = { version = "=0.6.0", features = ["serde"] }
 reqwest = { version = "=0.12.12", features = ["json", "stream"] }
@@ -155,7 +155,7 @@ tower-http = { version = "=0.6.2", features = ["catch-panic", "cors", "trace"] }
 tracing = { version = "=0.1.41", features = ["attributes"] }
 tracing-subscriber = "=0.3.19"
 unkey = "=0.5.0"
-uuid = { version = "=1.12.1", features = ["v4"], default-features = false }
+uuid = { version = "=1.13.2", features = ["v4"], default-features = false }
 
 [profile.release]
 lto = true
