--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
 		"@conform-to/react": "1.2.2",
 		"@conform-to/zod": "1.2.2",
 		"@formkit/auto-animate": "0.8.2",
+		"@gfazioli/mantine-onboarding-tour": "1.0.0",
 		"@hello-pangea/dnd": "18.0.1",
 		"@lukemorales/query-key-factory": "1.3.4",
 		"@mantine/carousel": "7.17.0",
