--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -55,6 +55,7 @@
 		"nanoid": "5.1.2",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-joyride": "2.9.3",
 		"react-router": "7.2.0",
 		"react-virtuoso": "4.12.5",
 		"recharts": "2.15.1",
