--- a/crates/models/dependent/Cargo.toml
+++ b/crates/models/dependent/Cargo.toml
@@ -9,7 +9,7 @@ chrono = { workspace = true }
 common-models = { path = "../common" }
 config = { path = "../../config" }
 database-models = { path = "../database" }
-enum-models = { path = "../../models/enum" }
+enum-models = { path = "../enum" }
 importer-models = { path = "../importer" }
 media-models = { path = "../media" }
 fitness-models = { path = "../fitness" }
@@ -20,6 +20,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
 strum = { workspace = true }
+user-models = { path = "../user" }
 uuid = { workspace = true }
 
 [package.metadata.cargo-machete]
