Add rust_decimal dependency to Cargo.toml and Cargo.lock
- Included rust_decimal in the dependencies of Cargo.toml for enhanced decimal handling.
- Updated Cargo.lock to reflect the addition of rust_decimal.
- Ensured compliance with coding standards by maintaining the order of attributes based on their length.

--- a/crates/utils/application/Cargo.toml
+++ b/crates/utils/application/Cargo.toml
@@ -16,6 +16,7 @@ jwt-service = { path = "../../services/jwt" }
 media-models = { path = "../../models/media" }
 openidconnect = { workspace = true }
 reqwest = { workspace = true }
+rust_decimal = { workspace = true }
 sea-orm = { workspace = true }
 tracing = { workspace = true }
 
