--- a/crates/services/collection/Cargo.toml
+++ b/crates/services/collection/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 common-models = { path = "../../models/common" }
+common-utils = { path = "../../utils/common" }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-utils = { path = "../../utils/dependent" }
@@ -17,3 +18,7 @@ migrations = { path = "../../migrations" }
 sea-orm = { workspace = true }
 sea-query = { workspace = true }
 supporting-service = { path = "../supporting" }
+tracing = { workspace = true }
+
+[package.metadata.cargo-machete]
+ignored = ["rust_decimal", "tracing"]
