--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -26,7 +26,7 @@
 		"@ryot/ts-utils": "workspace:*",
 		"@tabler/icons-react": "3.17.0",
 		"@tailwindcss/vite": "4.1.4",
-		"@unkey/api": "2.0.0-alpha.7",
+		"@unkey/api": "0.35.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
 		"dayjs": "1.11.13",
