Update GitHub Actions workflow to use latest Ubuntu version
- Changed the runner from ubuntu-20.04 to ubuntu-latest in the main.yml workflow file, ensuring compatibility with the latest features and improvements.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -218,7 +218,7 @@ jobs:
       - pre-workflow-checks
       - build-docker
     if: needs.pre-workflow-checks.outputs.should-release == 'true'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     env:
