--- a/crates/services/collection/Cargo.toml
+++ b/crates/services/collection/Cargo.toml
@@ -19,6 +19,7 @@ sea-orm = { workspace = true }
 sea-query = { workspace = true }
 supporting-service = { path = "../supporting" }
 tracing = { workspace = true }
+uuid = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["rust_decimal", "tracing"]
