--- a/crates/services/collection/Cargo.toml
+++ b/crates/services/collection/Cargo.toml
@@ -8,17 +8,20 @@ application-utils = { path = "../../utils/application" }
 async-graphql = { workspace = true }
 common-models = { path = "../../models/common" }
 common-utils = { path = "../../utils/common" }
+chrono = { workspace = true }
 database-models = { path = "../../models/database" }
 database-utils = { path = "../../utils/database" }
 dependent-utils = { path = "../../utils/dependent" }
 dependent-models = { path = "../../models/dependent" }
 enum-models = { path = "../../models/enum" }
+itertools = { workspace = true }
 media-models = { path = "../../models/media" }
 migrations = { path = "../../migrations" }
 sea-orm = { workspace = true }
 sea-query = { workspace = true }
 supporting-service = { path = "../supporting" }
 tracing = { workspace = true }
+uuid = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["rust_decimal", "tracing"]
