--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,15 +12,15 @@
 		"@formkit/auto-animate": "0.8.2",
 		"@hello-pangea/dnd": "18.0.1",
 		"@lukemorales/query-key-factory": "1.3.4",
-		"@mantine/carousel": "7.17.7",
-		"@mantine/charts": "7.17.7",
-		"@mantine/code-highlight": "7.17.7",
-		"@mantine/core": "7.17.7",
-		"@mantine/dates": "7.17.7",
-		"@mantine/form": "7.17.7",
-		"@mantine/hooks": "7.17.7",
-		"@mantine/modals": "7.17.7",
-		"@mantine/notifications": "7.17.7",
+		"@mantine/carousel": "8.0.0",
+		"@mantine/charts": "8.0.0",
+		"@mantine/code-highlight": "8.0.0",
+		"@mantine/core": "8.0.0",
+		"@mantine/dates": "8.0.0",
+		"@mantine/form": "8.0.0",
+		"@mantine/hooks": "8.0.0",
+		"@mantine/modals": "8.0.0",
+		"@mantine/notifications": "8.0.0",
 		"@mjackson/file-storage": "0.6.1",
 		"@mjackson/form-data-parser": "0.7.0",
 		"@react-router/fs-routes": "7.5.3",
@@ -39,7 +39,8 @@
 		"crypto-js": "4.2.0",
 		"dayjs": "1.11.13",
 		"dotenv": "16.5.0",
-		"embla-carousel-react": "7.1.0",
+		"embla-carousel": "8.6.0",
+		"embla-carousel-react": "8.6.0",
 		"filesize": "10.1.6",
 		"graphql": "16.11.0",
 		"graphql-request": "7.1.2",
