--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,20 +7,20 @@
 		"hoistingLimits": "workspaces"
 	},
 	"dependencies": {
-		"@conform-to/react": "1.4.0",
-		"@conform-to/zod": "1.4.0",
+		"@conform-to/react": "1.5.0",
+		"@conform-to/zod": "1.5.0",
 		"@formkit/auto-animate": "0.8.2",
 		"@hello-pangea/dnd": "18.0.1",
 		"@lukemorales/query-key-factory": "1.3.4",
-		"@mantine/carousel": "7.17.7",
-		"@mantine/charts": "7.17.7",
-		"@mantine/code-highlight": "7.17.7",
-		"@mantine/core": "7.17.7",
-		"@mantine/dates": "7.17.7",
-		"@mantine/form": "7.17.7",
-		"@mantine/hooks": "7.17.7",
-		"@mantine/modals": "7.17.7",
-		"@mantine/notifications": "7.17.7",
+		"@mantine/carousel": "8.0.0",
+		"@mantine/charts": "8.0.0",
+		"@mantine/code-highlight": "8.0.0",
+		"@mantine/core": "8.0.0",
+		"@mantine/dates": "8.0.0",
+		"@mantine/form": "8.0.0",
+		"@mantine/hooks": "8.0.0",
+		"@mantine/modals": "8.0.0",
+		"@mantine/notifications": "8.0.0",
 		"@mjackson/file-storage": "0.6.1",
 		"@mjackson/form-data-parser": "0.7.0",
 		"@react-router/fs-routes": "7.5.3",
@@ -32,14 +32,15 @@
 		"@ryot/graphql": "workspace:*",
 		"@ryot/ts-utils": "workspace:*",
 		"@tabler/icons-react": "3.17.0",
-		"@tanstack/react-query": "5.75.1",
-		"@tanstack/react-query-devtools": "5.75.1",
+		"@tanstack/react-query": "5.75.5",
+		"@tanstack/react-query-devtools": "5.75.5",
 		"clsx": "2.1.1",
 		"cookie": "1.0.2",
 		"crypto-js": "4.2.0",
 		"dayjs": "1.11.13",
 		"dotenv": "16.5.0",
-		"embla-carousel-react": "7.1.0",
+		"embla-carousel": "8.6.0",
+		"embla-carousel-react": "8.6.0",
 		"filesize": "10.1.6",
 		"graphql": "16.11.0",
 		"graphql-request": "7.1.2",
@@ -48,7 +49,7 @@
 		"humanize-duration-ts": "2.1.1",
 		"immer": "10.1.1",
 		"isbot": "5.1.27",
-		"jotai": "2.12.3",
+		"jotai": "2.12.4",
 		"js-cookie": "3.0.5",
 		"jwt-decode": "4.0.0",
 		"mantine-datatable": "7.17.1",
@@ -67,7 +68,7 @@
 		"ufo": "1.6.1",
 		"usehooks-ts": "3.1.1",
 		"uuid": "11.1.0",
-		"zod": "3.24.3"
+		"zod": "3.24.4"
 	},
 	"devDependencies": {
 		"@react-router/dev": "7.5.3",
@@ -76,17 +77,17 @@
 		"@types/crypto-js": "4.2.2",
 		"@types/howler": "2.2.12",
 		"@types/js-cookie": "3.0.6",
-		"@types/react": "19.1.2",
+		"@types/react": "19.1.3",
 		"@types/react-dom": "19.1.3",
 		"@types/uuid": "10.0.0",
 		"postcss": "8.5.3",
 		"postcss-preset-mantine": "1.17.0",
 		"postcss-simple-vars": "7.0.1",
-		"react-router-devtools": "5.0.0",
+		"react-router-devtools": "5.0.1",
 		"ts-essentials": "10.0.4",
 		"typescript": "5.8.3",
 		"typescript-plugin-css-modules": "5.1.0",
-		"vite": "6.3.4",
+		"vite": "6.3.5",
 		"vite-tsconfig-paths": "5.1.4"
 	},
 	"engines": {
