chore: change location of docs directory

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@ryot/root",
 	"packageManager": "yarn@4.1.1",
 	"workspaces": [
+		"apps/docs",
 		"apps/frontend",
 		"apps/website",
 		"libs/generated",
