chore(docs): add vitepress as a devDependency in package.json

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,5 +1,8 @@
 {
 	"name": "@ryot/docs",
 	"private": true,
-	"type": "module"
+	"type": "module",
+	"devDependencies": {
+		"vitepress": "1.6.3"
+	}
 }
