chore(docs): update output path for vitepress build in moon.yml

--- a/apps/docs/moon.yml
+++ b/apps/docs/moon.yml
@@ -14,7 +14,7 @@ tasks:
       - "vitepress"
       - "build"
     outputs:
-      - "dist"
+      - ".vitepress/dist"
 
 workspace:
   inheritedTasks:
