Update package.json and yarn.lock to include vite-tsconfig-paths as a devDependency for improved TypeScript path resolution

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -2,10 +2,9 @@
 	"name": "@ryot/docs",
 	"private": true,
 	"type": "module",
-	"dependencies": {
-		"@ryot/ts-utils": "workspace:*"
-	},
 	"devDependencies": {
+		"@ryot/ts-utils": "workspace:*",
+		"vite-tsconfig-paths": "5.1.4",
 		"vitepress": "2.0.0-alpha.5"
 	}
 }
