Update project configuration to include backend API tests
- Added "tests/backend-api" to the package.json and tsconfig.json for improved project structure.
- Updated workspace configuration in .moon/workspace.yml to include the new backend API tests project.
- Modified yarn.lock to reflect new dependencies related to backend API testing, enhancing testing capabilities.

--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -10,6 +10,7 @@ projects:
   transactional: "libs/transactional"
   ts-utils: "libs/ts-utils"
   website: "apps/website"
+  backend-api-tests: "tests/backend-api"
 
 vcs:
   manager: "git"
