Update dependencies and configuration for backend API tests
- Added new dependencies in tests/backend-api/package.json for AWS SDK, PostgreSQL testing, and GraphQL support to enhance testing capabilities.
- Updated vitest configuration to increase test and hook timeouts, and added global setup for improved test execution.
- Modified Caddyfile to use an environment variable for backend URL, improving configuration flexibility.
- Updated yarn.lock to reflect the new dependencies and ensure consistent package management.

--- a/ci/Caddyfile
+++ b/ci/Caddyfile
@@ -6,7 +6,7 @@
 :{$PORT:8000} {
 	vars {
 		frontend_url "127.0.0.1:3000"
-		backend_url "127.0.0.1:5000"
+		backend_url {$CADDY_BACKEND_TARGET:127.0.0.1:5000}
 	}
 
 	handle_path /_i/* {
