--- a/ci/Caddyfile
+++ b/ci/Caddyfile
@@ -5,7 +5,7 @@
 
 :{$PORT:8000} {
 	vars {
-		frontend_url "127.0.0.1:3000"
+		frontend_url {$CADDY_FRONTEND_TARGET:127.0.0.1:3000}
 		backend_url {$CADDY_BACKEND_TARGET:127.0.0.1:5000}
 	}
 
