Add user entity association functionality in LpApplicationJob
- Introduced a new variant `AssociateUserWithEntity` in the `LpApplicationJob` enum to handle user and entity associations.
- Implemented the `perform_user_entity_association` method in `MiscellaneousService` to manage the association logic, including updating or inserting records as necessary.
- Updated various parts of the codebase to utilize the new job variant, ensuring that user-entity associations are processed correctly during relevant operations.
- This change enhances the application's ability to manage user relationships with entities, improving overall functionality and data integrity.

--- a/crates/models/background/Cargo.toml
+++ b/crates/models/background/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 chrono = { workspace = true }
 database-models = { path = "../database" }
+enum-models = { path = "../enum" }
 media-models = { path = "../media" }
 serde = { workspace = true }
 strum = { workspace = true }
