--- a/apps/docs/src/includes/backend-config-schema.yaml
+++ b/apps/docs/src/includes/backend-config-schema.yaml
@@ -152,6 +152,10 @@ scheduler:
   # @envvar SCHEDULER_FREQUENT_CRON_JOBS_EVERY_MINUTES
   frequent_cron_jobs_every_minutes: 5
 
+  # Hours cron component for infrequent cron jobs (cleaning up data, refreshing calendar).
+  # @envvar SCHEDULER_INFREQUENT_CRON_JOBS_HOURS_FORMAT
+  infrequent_cron_jobs_hours_format: "*"
+
 # Settings related to server.
 server:
   # An access token that can be used for admin operations.
