feat(collections): add user collections list functionality and update dependencies
- Introduced a new function `user_collections_list` to retrieve and cache user collections, enhancing the user experience by providing a structured response with collaborators and counts.
- Updated the `Cargo.toml` files to include the `sea-query` dependency, ensuring compatibility with the new functionality.
- Refactored the `CollectionService` to utilize the new `user_collections_list` function, streamlining the code and improving maintainability.
- This change enhances the collections feature by providing a more efficient way to manage and retrieve user collections.

--- a/crates/utils/dependent/Cargo.toml
+++ b/crates/utils/dependent/Cargo.toml
@@ -29,6 +29,7 @@ rand = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 sea-orm = { workspace = true }
+sea-query = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 slug = { workspace = true }
